# internal/presentation/oas/oas_validators_gen.go
@@ -2015,6 +2015,29 @@ func (s *TalkSessionAnalysisOKGroupOpinionsItemOpinionsItem) Validate() error {
 	return nil
 }
 
+func (s *TalkSessionListResponse) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.TalkSessionStats == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "TalkSessionStats",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s *User) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
